Fixed the addContact bug in desktop Version z-index wasn correct.  Header and sidebar have now an correct z-index.  Privacy policy is now for bigger screens responsive.

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -53,7 +53,7 @@
     top: 60px;
     width: 430px;
     height: 160px;
-    z-index: 100;
+    z-index: 3;
 }
 
 .contact-list p {
@@ -74,7 +74,7 @@
     justify-content: center;
     width: 456px;
     height: 101px;
-    z-index: 1;
+    z-index: 4;
 }
 
 .add-new-contact-btn {
@@ -585,9 +585,15 @@
 
 @media screen and (min-width: 1921px) {
     .edit-delete-contact-button {
-        display: none!important;
+        display: none !important;
     }
     
+    .add-new-contact-btn-mobile-version {
+    height: 60px;
+    width: 60px;
+    border-radius: 100%;
+    display: none !important;
+    }
 }
 
 @media screen and (max-width: 1920px) {
