--- a/css/info-pages.css
+++ b/css/info-pages.css
@@ -1,12 +1,40 @@
+.privacy-policy-body {
+    height: 1080px;
+    margin: 0 auto;
+    max-height: 1080px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
 .info-pages {
     margin-left: 328px;
-    margin-right: 80px;
-    margin-top: 190px;
-    margin-bottom: 100px;
+    padding-top: 130px;
+    padding-right: 80px;
+    max-width: 1920px;
+    max-height: 1080px;
+    overflow-y: auto;
+    width: 1590px;
+    height: 1080px;
 }
 
 .info-pages a {
     color: rgba(75, 183, 232);
+}
+
+.info-pages {
+  overflow-y: auto;
+
+  scrollbar-width: none;
+
+  -ms-overflow-style: none;
+}
+
+.info-pages::-webkit-scrollbar {
+  display: none;
 }
 
 .headline-arrow-container {
